Add direct and balance quota kinds to improve usage metering
